chnaging folder structure for deploy problem

--- a/quiz.html
+++ b/quiz.html
@@ -93,7 +93,7 @@
     </div>
     <button class="sm:fixed top-0 right-10 m-5 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-lg" id="submit">Submit</button>
     <p class="pb-5"></p>
-    <script src="js/app.js"></script>
+    <script src="/scripts/quiz.js"></script>
 </body>
 
 </html>
