--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Submit
         </button>
     </form>
-    <script src="/scripts/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
